 are suspended or if the cursor is invisible, "wholeline" cursor mode renamed
 to "bar+line", "bar" mode added, the ReadOnly attribute does not inhibit
 marking text anymore, updateMark() added, window update suspension mechanism
 reactivated and other fixes
 * Removed redundant code from display drivers
 * Visual: added large number of pixel formats and conversions, added pixmap
 caching (used for gradients)
 * x11 driver, rawfb driver: added pixmap caching, added support for more 
 pixel formats
 * DirList: list dblclicks are acted upon mouse press, not release now
 * Added compiler tool again, some infrastructure for amalgamized builds added
 * UI: minor fixes in ProgDir/ProgName detection and stylesheet loading

=== 1.08: ===

 * Added support for dynamic reconfiguration from stylesheets during runtime
 * Area: Width/Height, Min/Max/Width/Height are no longer consolidated during
 new(), but interpreted by the layouter during runtime by accessing them via
 getAttr()
 * Demo program: Added menu item "Open stylesheet..."
 * Added a sanity check in Window:update()
 * Added LUAVER variable in config to switch Lua install paths
 * Text, Canvas: KeepMinWidth/Height are now translated to flags
 * Rawfb: Topmost window is focused now after the focused window was closed

=== 1.07: ===

 * ui.checkVersion() added
 * ui, Area, Window: FL_ISWINDOW, FL_DONOTBLIT added and honoured
 * Window:relayout() uses FL_ISWINDOW to avoid expensive uses of instanceOf()
 * Slider knobs are no longer blitted
 * Canvas:damage() did not check for rectangle, corrected
 * Build procedure: builds with just a single display driver can be configured
 entirely via config file now

=== 1.06: ===

 * Serious regression fixed: Since 1.02, updating sliders was abysmally
 expensive and could disturb the refreshing of other elements
 * config.h, config, Makefiles: Some Mac OS X support added
 * FloatText:erase() did not check for a DamageRegion, corrected