@@ -2,4 +2,4 @@
 .*\.lo
 .*\.a
 .*\.dll
-
+lua\.exe
