@@ -61,7 +61,7 @@
 				</li>
 				<li>
 					Visual: added large number of pixel formats and conversions, added pixmap
-					caching (used for gradients)
+					caching (used for gradients), added screenwidth/height properties
 				</li>
 				<li>
 					x11 driver, rawfb driver: added pixmap caching, added support for more
@@ -74,7 +74,13 @@
 					Added compiler tool again, some infrastructure for amalgamized builds added
 				</li>
 				<li>
-					UI: minor fixes in ProgDir/ProgName detection and stylesheet loading
+					UI: minor fixes in ProgDir/ProgName detection and stylesheet loading,
+				</li>
+				<li>
+					Application: Dialogues are now confined to the visible screen
+				</li>
+				<li>
+					Widget, UI: Added NoFocus attribute and FL_NOFOCUS
 				</li>
 			</ul>
 		</blockquote>
