@@ -511,6 +511,7 @@ getattrfunc(struct THook *hook, TAPTR obj, TTAG msg)
 	struct attrdata *data = hook->thk_Data;
 	TTAGITEM *item = obj;
 	DFBWINDOW *v = data->v;
+	DFBDISPLAY *mod = data->mod;
 
 	switch (item->tti_Tag)
 	{
@@ -524,6 +525,12 @@ getattrfunc(struct THook *hook, TAPTR obj, TTAG msg)
 			break;
 		case TVisual_Height:
 			*((TINT *) item->tti_Value) = v->winheight;
+			break;
+		case TVisual_ScreenWidth:
+			*((TINT *) item->tti_Value) = mod->dfb_ScrWidth;
+			break;
+		case TVisual_ScreenHeight:
+			*((TINT *) item->tti_Value) = mod->dfb_ScrHeight;
 			break;
 		case TVisual_WinLeft:
 			*((TINT *) item->tti_Value) = v->winleft;
